Bug 480412 - "Remote control requested" dialog from KDE Connect doesn't show source of the request when kdeconnect was started via DBus
Summary: "Remote control requested" dialog from KDE Connect doesn't show source of the...
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git-master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-01-27 22:49 UTC by Nicolas Fella
Modified: 2026-06-18 14:13 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (126.95 KB, image/png)
2024-01-27 22:49 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2024-01-27 22:49:24 UTC
Created attachment 165294 [details]
Screenshot

STEPS TO REPRODUCE
1. Use KDE Connect on Wayland 
2. Use Remote Input

OBSERVED RESULT

Dialog that says "Requested access to:". See screenshot

EXPECTED RESULT
Something like: "KDE Connect requested access to:"

SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 6.7

ADDITIONAL INFORMATION
Comment 1 Doug 2024-01-28 05:23:44 UTC
On KDE Neon Testing the dialogue is phrased as you put it.  Maybe someone fixed this already?
Comment 2 Prajna Sariputra 2024-01-29 08:38:53 UTC
The reported app name depends on how kdeconnectd is started, if it was via the autostart .desktop file then it works fine, if it's started via a DBus call (for example by running `kdeconnect-cli --refresh` after killing kdeconnectd) then no app name is shown like in the screenshot, and if it's manually run via say Konsole then the dialog will say that Konsole is making the request.
Comment 3 Nate Graham 2024-01-29 17:34:47 UTC
Can reproduce.
Comment 4 rickard 2024-06-30 07:46:06 UTC
I removed KDE Connect.
It still always happens under wayland when starting proton games.
Comment 5 Casey 2024-07-20 23:29:37 UTC
(In reply to Nate Graham from comment #3)
> Can reproduce.

Just happened here. I have journalctl -f running in a guake tab and it captured this:
 xdg-desktop-portal-kde[1564]: xdp-kde-remotedesktop: Only stream input
Jul 20 17:07:17 Kandalf kwin_wayland[1270]: kwin_libeis: Libeis: registering eis_handshake v1 object 0
Jul 20 17:07:17 Kandalf kwin_wayland[1270]: kwin_libeis: Libeis: sending: object 0 (eis_handshake@v1:handshake_version(0)) signature 'u'
Jul 20 17:07:17 Kandalf kwin_wayland[1270]: kwin_libeis: Libeis: dispatching eis_handshake.handshake_version() on object 0
-------------------------------------
followed by more of the same to end up here:
win_wayland[1270]: kwin_libeis: Libeis: sending: object 0xff0000000000000b (eis_device@v2:interface(5)) signature 'nsu'
Jul 20 17:07:17 Kandalf kwin_wayland[1270]: kwin_libeis: Libeis: sending: object 0xff0000000000000c (eis_keyboard@v1:keymap(1)) signature 'uuh'
Jul 20 17:07:17 Kandalf kwin_wayland[1270]: kwin_libeis: Libeis: sending: object 0xff0000000000000b (eis_device@v2:done(6)) signature ''
Jul 20 17:07:17 Kandalf kwin_wayland[1270]: kwin_libeis: Libeis: sending: object 0xff0000000000000b (eis_device@v2:resumed(7)) signature 'u'
Jul 20 17:07:17 Kandalf kwin_wayland[1270]: kwin_libeis: Libeis: dispatching eis_device.start_emulating() on object 0xff00000000000003
Jul 20 17:07:17 Kandalf kwin_wayland[1270]: kwin_libeis: Libeis: queuing event type EIS_EVENT_DEVICE_START_EMULATING (200)
Jul 20 17:07:17 Kandalf kwin_wayland[1270]: kwin_libeis: Device "xembedsniproxy eis absolute device" starts emulating
Jul 20 17:07:17 Kandalf kwin_wayland[1270]: kwin_libeis: Libeis: dispatching eis_device.start_emulating() on object 0xff00000000000007
Jul 20 17:07:17 Kandalf kwin_wayland[1270]: kwin_libeis: Libeis: queuing event type EIS_EVENT_DEVICE_START_EMULATING (200)
Jul 20 17:07:17 Kandalf kwin_wayland[1270]: kwin_libeis: Device "xembedsniproxy eis pointer" starts emulating
Jul 20 17:07:17 Kandalf kwin_wayland[1270]: kwin_libeis: Libeis: dispatching eis_device.start_emulating() on object 0xff0000000000000b
Jul 20 17:07:17 Kandalf kwin_wayland[1270]: kwin_libeis: Libeis: queuing event type EIS_EVENT_DEVICE_START_EMULATING (200)
Jul 20 17:07:17 Kandalf kwin_wayland[1270]: kwin_libeis: Device "xembedsniproxy eis keyboard" starts emulating
-------------------------------------------------------
Comment 6 Jonah Jones 2024-09-05 21:47:23 UTC
(In reply to rickard from comment #4)
> I removed KDE Connect.
> It still always happens under wayland when starting proton games.

For me, it happens under wayland in proton games while using gamescope.
Comment 7 rickard 2024-09-06 03:56:13 UTC
It shows the source now in KDE 6.1.4
For me, it was xdotool in a script I had as a wrapper for proton games.
Comment 8 redford 2024-12-06 11:51:32 UTC
I have the same issue with VMware Workstation running a Windows 10 client VM. From time to time this dialog is spammed in a loop, without any useful information in it - it sounds like someone tries to take over my computer remotely and doesn't provide any useful information for me to make the decision (most importantly, what app is requesting it and whether it was remote or local).
Comment 9 Yujiro Hanma 2024-12-14 10:16:50 UTC
I should add that I have another weird consequence of xdg-desktop-portal-kde misbehaving with vmware-workstation, it seems to permanently enable the control key when remote access is enabled to a windows 10 vm. like anything I do on the host the ctrl key is always pressed. If I go to a terminal and press d it immediately closes itself, like I pressed ctrl+d.
Comment 10 Bug Janitor Service 2025-01-20 21:14:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/kdeconnect-kde/-/merge_requests/779
Comment 11 kdebug 2025-03-09 20:42:54 UTC
Sorry if not relevant (I don't have KDE Connect installed) but for me this happens with VMWare Workstation on KDE 3.6.2.
Comment 12 David Redondo 2026-06-18 14:13:24 UTC
Are you sure about the version? ;)

I just tested with Qt > 6.10.1 and a xdg-desktop-portal with host registry support. Kdeconnect is identified ootb.